; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_cl_ui.c_UI_GameCommand.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_cl_ui.c_UI_GameCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@uivm = common dso_local global i32 0, align 4
@qfalse = common dso_local global i32 0, align 4
@UI_CONSOLE_COMMAND = common dso_local global i32 0, align 4
@cls = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UI_GameCommand() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @uivm, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %6, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @qfalse, align 4
  store i32 %5, i32* %1, align 4
  br label %11

6:                                                ; preds = %0
  %7 = load i32, i32* @uivm, align 4
  %8 = load i32, i32* @UI_CONSOLE_COMMAND, align 4
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cls, i32 0, i32 0), align 4
  %10 = call i32 @VM_Call(i32 %7, i32 %8, i32 %9)
  store i32 %10, i32* %1, align 4
  br label %11

11:                                               ; preds = %6, %4
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @VM_Call(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
